--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
     compile "com.android.support:design:${supportLibraryVersion}"
     compile "com.android.support:cardview-v7:${supportLibraryVersion}"
+    compile "com.android.support:preference-v7:${supportLibraryVersion}"
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
